# TileDB-SOMA

./: .clang-format  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .readthedocs.yml.pending  404.html  CONTRIBUTING.md  Doxyfile  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  Makefile  README-docs.md  README.md  _quarto.yml  authors.html  authors.md  codecov.yml  encoding_specification.md  index.html  index.md  llms.txt  overview.md  pkgdown.yml  pull_request_template.md  ruff.toml  search.json  sitemap.xml  tutorial_soma_objects.ipynb  vcpkg-configuration.json
apis/python/: .gitignore  .vimrc  CMakeLists.txt  HISTORY.md  MANIFEST.in  README-csr-ingest.md  README-dev.md  README-ingestion.md  README.md  _get_version.py  build_manylinux_wheel.sh  dask.md  desc-ann-types.py  desc-ann.py  desc-array-fragments.py  desc-module.py  desc-tiledb.py  dsk.py  ff  gha-trigger.txt  ingestor.py  interactor.py  mkmd.sh  outgestor.py  pbmc-small.md  peek-ann.py  peek-soma.py  peek.py  pyproject.toml  requirements_dev.txt  requirements_dsk.txt  requirements_spatial.txt  setup.cfg  setup.py  soco-material.py  top-allocs.py  version.py
apis/python/anndata/: README.md  bruce-spatial.h5ad  pbmc-small-x-dense.h5ad  pbmc-small.h5ad
apis/python/devtools/: README.md  desc-ann  desc-array-fragments  generate-small-anndata  ingestor  outgestor  peek-exp.py
apis/python/dist_links/: README.md  libtiledbsoma
apis/python/doc/: README-ingestion.md  annotation_dataframe.md  annotation_matrix.md  annotation_matrix_group.md  annotation_pairwise_matrix_group.md  api-overview.md  assay_matrix.md  assay_matrix_group.md  cheat-sheet.md  overview.md  raw_group.md  soma.md  soma_collection.md  soma_options.md  soma_slice.md  tiledb_array.md  tiledb_group.md  tiledb_object.md  tiledbsc.md  uns_array.md  uns_group.md  util.md  util_ann.md  util_tiledb.md
apis/python/example-scripts/: ingest_h5ads.py
apis/python/examples/: README-pre-query.md  anndata-and-tiledb.md  cartographer.py  collection-counts.py  examples-overview.md  ingesting-data-files.md  inspecting-schema.md  normalizing.md  obtaining-data-files.md  pre-query.py  soco-batch-query.md  soco-batch-query.py  soco-reconnaissance.md  soco-slice-query.md  soco-slice-query.py  soma-collection-reconnaissance.md  soma-slice-query.md  uniform-collection.md  uniformizer.py
apis/python/notebooks/: README.md  turtorial_pytorch.ipynb  tutorial-scanpy-pca-dask.ipynb  tutorial_exp_query.ipynb  tutorial_scanpy_pca_dask.ipynb  tutorial_soma_append_mode.ipynb  tutorial_soma_objects.ipynb  tutorial_soma_reading.ipynb  tutorial_soma_shape.ipynb  tutorial_spatial.ipynb
apis/python/remote_tests/: README.md  __init__.py  conftest.py  test_01_setup.py  test_02_analysis.py  test_03_versions.py  test_04_append.py  test_04_todo.py  test_99_todo.py  util.py
apis/python/repl/: peek-ann  peek-exp  peek-soco  peek-soma
apis/python/scripts/: setup_build_env.ps1  setup_build_env.sh
apis/python/testdata/: README.md  categorical_int_nan.h5ad  nonstandard-dataframe-without-shapes.tgz  pbmc-small-x-csc.h5ad  pbmc-small-x-csr.h5ad  x-empty.h5ad  x-none.h5ad  xnone.h5ad
apis/python/tests/: __init__.py  _util.py  conftest.py  parametrize_cases.py  test_10x_reader.py  test_aaa_setup.py  test_add_layer.py  test_anndata_layers.py  test_anndata_raw.py  test_anndata_uns.py  test_arrow_type.py  test_ascii_and_unicode.py  test_attribute_filter.py  test_basic_anndata_io.py  test_basic_spatialdata_io.py  test_basic_xarray_io.py  test_chunked_writes.py  test_clib.py  test_collection.py  test_context.py  test_coordinates.py  test_create_options.py  test_dataframe.py  test_dataframe_index_columns.py  test_dataframe_io_roundtrips.py  test_debug_ci.py  test_dense_nd_array.py  test_dev.py  test_dim_select.py  test_eager_iter.py  test_experiment_axis_delete.py  test_experiment_basic.py  test_experiment_query.py  test_experiment_query_spatial.py  test_export_multiscale_image.py  test_export_point_cloud_dataframe.py  test_factory.py  test_fastercsx.py  test_foo.py  test_from_visium.py  (+81 more)
apis/python/tools/: README.md  cartographer  cartographer.py  desc-ann  (+22 more)
libtiledbsc/: CMakeLists.txt  README.md
libtiledbsc/cmake/: Superbuild.cmake
libtiledbsc/perf/: s3-lib.py  s3-py.py
libtiledbsc/src/: CMakeLists.txt  cli.cc  column_buffer.cc  common.cc  logger.cc  logger.h  managed_query.cc  soma.cc  soma_collection.cc  soma_collection_query.cc  soma_query.cc  tiledbsc.cc  util.cc
libtiledbsc/test/: CMakeLists.txt  test_simple.py  test_soma.py  unit_column_buffer.cc  unit_managed_query.cc  unit_sc.cc  unit_soco.cc  unit_soma.cc  unit_thread_pool.cc
libtiledbsoma/: CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  vcpkg-configuration.json  vcpkg.json
libtiledbsoma/cmake/: Superbuild.cmake
libtiledbsoma/doc/: README.md  reader.uml
libtiledbsoma/perf/: s3-lib.py  s3-py.py
libtiledbsoma/src/: CMakeLists.txt  cli.cc  column_buffer.cc  logger.cc  logger.h  managed_query.cc  soma.cc  soma_array.cc  soma_array_reader.cc  soma_collection.cc  soma_collection_query.cc  soma_group_writer.cc  soma_query.cc  soma_reader.cc  stats.cc  version.cc
libtiledbsoma/test/: CMakeLists.txt  common.cc  common.h  dev.cc  test_coordinate_value_filter.cc  test_indexer.cc  test_indexer.py  test_metadata.cc  test_platform_config.cc  test_query_condition.py  test_simple.py  test_soma.py  test_soma_array.py  test_soma_array_reader.py  test_soma_column_selection.cc  test_soma_object_basics.cc  test_soma_query_condition.cc  test_soma_reader.py  test_value_filter.cc  unit_arrow_adapter.cc  unit_column_buffer.cc  unit_geometry_envelope.cc  unit_geometry_roundtrip.cc  unit_managed_query.cc  unit_soco.cc  unit_soma.cc  unit_soma_array.cc  unit_soma_array_reader.cc  unit_soma_collection.cc  unit_soma_column.cc  unit_soma_coordinates.cc  unit_soma_dataframe.cc  unit_soma_dense_ndarray.cc  unit_soma_geometry_dataframe.cc  unit_soma_group.cc  unit_soma_metadata.cc  unit_soma_multiscale_image.cc  unit_soma_point_cloud.cc  unit_soma_point_cloud_dataframe.cc  unit_soma_reader.cc  (+4 more)
(+1923 files in other folders)
